refactor(message): 优化消息查询功能并添加统计信息
-重构消息查询逻辑，支持按已读状态筛选
- 新增消息统计功能，包括已读和未读数量
- 优化消息详情查询，自动标记为已读- 调整消息删除接口，支持批量删除
- 新增获取已读消息ID列表功能